# time_sync_bag_to_csv

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
data/: Sunapee-2021-01-01.csv  Sunapee-test.csv  Sunapee-test_parameter.txt
launch/: converter-multi.launch  converter.launch  harness.launch
launch/old/: rosbagplayer.launch
nodes/: convert_harness  csv_converter
nodes/old/: csv_converter_multiobs
param/: param.yaml
src/time_sync_bag_to_csv/: ConvertHarness.py  converter.py
src/time_sync_bag_to_csv/old/: converter_multiobs.py
