<?xml version="1.0"?>
<package format="2">
  <name>time_sync_bag_to_csv</name>
  <version>0.0.1</version>
  <description>The time_sync_bag_to_csv package convers rosbag into .csv format</description>

  <maintainer email="mingi.jeong.gr@dartmouth.edu">Mingi Jeong</maintainer>
  <maintainer email="monika.roznere.gr@dartmouth.edu">Monika Roznere</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>rospy</build_export_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>ysi_exo</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>ysi_exo</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
